[package]
name = "Voxy"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "22.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
wasm-bindgen = "0.2.95"
cfg-if = "1.0.0"
web-sys = "0.3.72"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
